force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <description>Object used for linked budget headings to budget lines and funding requests.</description>
    <label>Budget</label>
    <nameField>
        <displayFormat>BID-{000000000}</displayFormat>
        <label>Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>