force-app/main/default/objects/Budget__c/fields/Awarded__c.field-meta.xml
<CustomField>
    <fullName>Awarded__c</fullName>
    <inlineHelpText>Sum of all awarded amounts associated with this budget heading</inlineHelpText>
    <label>Awarded</label>
    <summarizedField>Budget_Line__c.Awarded__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>