force-app/main/default/objects/Budget__c/fields/Budget_Category__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Category</label>
    <referenceTo>Budget_Category__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>