force-app/main/default/objects/Budget__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <inlineHelpText>Sum of all changes associated with this budget heading</inlineHelpText>
    <label>Change</label>
    <summarizedField>Budget_Line__c.Change__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>