force-app/main/default/objects/Budget__c/fields/Funding_Request__c.field-meta.xml
<CustomField>
    <fullName>Funding_Request__c</fullName>
    <label>Funding Request</label>
    <referenceTo>outfunds__Funding_Request__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>