force-app/main/default/objects/Budget__c/fields/Heading__c.field-meta.xml
<CustomField>
    <fullName>Heading__c</fullName>
    <inlineHelpText>This is the heading for this budget item</inlineHelpText>
    <label>Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>