force-app/main/default/objects/Budget__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <inlineHelpText>Sum of all payment amounts associated with this budget heading</inlineHelpText>
    <label>Payment Amount</label>
    <summarizedField>Budget_Line__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>