force-app/main/default/objects/Budget__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <inlineHelpText>Sum of all plans associated with this budget heading</inlineHelpText>
    <label>Plan</label>
    <summarizedField>Budget_Line__c.Plan__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>