force-app/main/default/objects/Budget__c/fields/Recommended__c.field-meta.xml
<CustomField>
    <fullName>Recommended__c</fullName>
    <inlineHelpText>Sum of all recommended amounts associated with this budget heading</inlineHelpText>
    <label>Recommended</label>
    <summarizedField>Budget_Line__c.Recommended__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>