force-app/main/default/objects/Budget__c/fields/Spend__c.field-meta.xml
<CustomField>
    <fullName>Spend__c</fullName>
    <inlineHelpText>Sum of all spend associated with this budget heading</inlineHelpText>
    <label>Spend</label>
    <summarizedField>Budget_Line__c.Spend__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>