force-app/main/default/objects/Budget__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <inlineHelpText>Sum of all variance associated with this budget heading</inlineHelpText>
    <label>Variance</label>
    <summarizedField>Budget_Line__c.Variance__c</summarizedField>
    <summaryForeignKey>Budget_Line__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>